fixed issues on mobile devices ig(help me)

--- a/styles.css
+++ b/styles.css
@@ -14,12 +14,14 @@ body {
 	display: flex;
 	justify-content: space-around;
 	align-items: center;
+	flex-direction: row;
+	flex-wrap: wrap;
 	font-size: 30px;
 }
 
 .home img {
-	width: 400px;
-	height: 500px;
+	/*width: 400px;*/
+	height: 400px;
 	margin-left: 100px;
 	margin-right: 100px;
 	margin-bottom: 100px;
@@ -27,10 +29,15 @@ body {
 
 .home h1{
 	padding-bottom: 50px;
+	font-size:1.2em;
+	/*margin-left: 50px;*/
 }
 
 .home p {
-	font-size: 20px;
+	width: 65vw;
+	font-size: 0.6em;
+	text-align:justify;
+	margin: 10px;
 }
 
 .nav-links a{
@@ -140,8 +147,9 @@ header {
 	/*border-radius: 5px;*/
 	flex-direction: column;
 	align-items: center;
-
-	padding:100px 50px 100px 50px;
+	padding-top: 25px;
+	padding-bottom: 25px; 	
+	/*padding:100px 50px 100px 50px;*/
 
 }
 .about h2{
@@ -186,4 +194,3 @@ header {
 	/*opacity: 0.7;*/
 
 }
-	
